# gnome-power-toys

./: .gitignore  .gitmodules  Cargo.toml  README.md  justfile
crates/gnome-clips/: Cargo.toml
crates/gnome-clips-daemon/: Cargo.toml
crates/gnome-clips-daemon/src/: config.rs  error.rs  incognito.rs  main.rs  preview.rs  retention.rs
crates/gnome-clips-daemon/src/clipboard/: mod.rs  wayland.rs  writer.rs  x11.rs
crates/gnome-clips-daemon/src/db/: clips.rs  exclusions.rs  mod.rs  schema.rs  settings.rs  tags.rs
crates/gnome-clips-daemon/src/dbus/: interface.rs  mod.rs  types.rs
crates/gnome-clips/src/: error.rs  main.rs  paste.rs  shortcut.rs  util.rs
crates/gnome-clips/src/app/: clip_list.rs  clip_row.rs  filter_bar.rs  mod.rs  preview_pane.rs  window.rs
crates/gnome-clips/src/dbus/: mod.rs  proxy.rs
crates/gnome-clips/src/panel/: indicator.rs
crates/gnome-zones/: Cargo.toml
crates/gnome-zones-daemon/: Cargo.toml
crates/gnome-zones-daemon/src/: error.rs  hotkeys.rs  lib.rs  main.rs  math.rs  model.rs  monitors.rs  presets.rs
crates/gnome-zones-daemon/src/db/: layouts.rs  mod.rs  monitors.rs  schema.rs  settings.rs
crates/gnome-zones-daemon/src/dbus/: interface.rs  mod.rs  types.rs
crates/gnome-zones-daemon/src/snap/: mod.rs  state.rs
crates/gnome-zones-daemon/src/window/: mod.rs  mutter.rs  shim.rs
crates/gnome-zones/src/: app.rs  main.rs
crates/gnome-zones/src/activator/: mod.rs  state.rs  view.rs
crates/gnome-zones/src/dbus/: mod.rs  proxy.rs
crates/gnome-zones/src/editor/: mod.rs  state.rs  view.rs
crates/gnome-zones/src/overlay/: layer_shell.rs  mod.rs
crates/gnome-zones/src/panel/: indicator.rs  mod.rs
debian/: changelog  control  copyright  gnome-clips.postinst  gnome-zones.postinst  rules
docs/: gnome-key-bindings.md
docs/superpowers/plans/: 2026-04-14-gnome-clips-daemon.md  2026-04-14-gnome-clips-packaging.md  2026-04-14-gnome-clips-ui.md  2026-04-14-gnome-zones-daemon.md  2026-04-14-gnome-zones-ui.md  2026-04-20-gnome-power-toys-packaging.md
docs/superpowers/specs/: 2026-04-14-gnome-clips-design.md  2026-04-14-gnome-deck-design.md  2026-04-14-gnome-zones-design.md  2026-04-20-gnome-power-toys-packaging.md
scripts/: build-packages.sh
