[package]
name = "gnome-clips-daemon"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "gnome-clips-daemon"
path = "src/main.rs"

[dependencies]
tokio       = { version = "1",    features = ["full"] }
zbus        = { version = "4",    features = ["tokio"] }
rusqlite    = { version = "0.31", features = ["bundled"] }
serde       = { version = "1",    features = ["derive"] }
tracing     = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
thiserror   = "1"
dirs        = "5"
sha2        = "0.10"
wl-clipboard-rs = "0.8"
x11-clipboard   = "0.9"

[dev-dependencies]
tempfile    = "3"
