[package]
name    = "gnome-zones"
version = "0.1.0"
edition = "2021"
license = "GPL-3.0-or-later"

[[bin]]
name = "gnome-zones"
path = "src/main.rs"

[dependencies]
gtk4               = { version = "0.9", features = ["v4_12"] }
libadwaita         = { version = "0.7", features = ["v1_5"] }
gtk4-layer-shell   = "0.4"
zbus               = { version = "4",    features = ["tokio"] }
tokio              = { version = "1",    features = ["full"] }
serde              = { version = "1",    features = ["derive"] }
futures-util       = "0.3"
tracing            = "0.1"
tracing-subscriber = { version = "0.3",  features = ["env-filter"] }
thiserror          = "1"
clap               = { version = "4",    features = ["derive"] }
ksni               = "0.3"
async-channel      = "2"
